trunk/Archive2/8f/070fab4f3113cc/output
main.cpp:24:22: error: implicit instantiation of undefined template 'varint<unsigned int, void>'
    varint<uint32_t> test = {1};
                     ^
main.cpp:6:45: note: template is declared here
template<typename T,typename E=void> struct varint;
                                            ^
1 error generated.
